# limina

./: .gitignore  Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml  deploy.yml
art-direction/: README.md  SCHEMA.md
assets/: ATTRIBUTION.md  CREDITS.md  broadleaf.glb  make-x-header.py  prop-barrel-1.glb  prop-campfire-1.glb  prop-water-well-1.glb  textured-triangle.gltf  triangle.glb  vegetation-pine-tree-1.glb
brain/: ETHOS.md  NOTICE  README.md  SKILL_TEMPLATE.md  UPSTREAM-architecture.md  gamestack-LICENSE
brain/overlays/: godot.md  limina.md  threejs.md  unity.md  unreal.md
brain/shared/: GATE.md  PREAMBLE.md
coordinator-demo/: index.html  styles.css
coordinator-demo/src/: app.js  mcp-client.js  viewmodel.js  world-renderer.js
crates/limina-audio/: Cargo.toml
crates/limina-ecs/: Cargo.toml
crates/limina-ops/: Cargo.toml
crates/limina-physics/: Cargo.toml
crates/limina-physics/src/: lib.rs
crates/limina-render/: Cargo.toml
crates/limina-render/js/: 00_bootstrap.js
crates/limina-render/src/: lib.rs  surface.rs
crates/limina-runtime/: Cargo.toml
crates/limina-runtime/src/: main.rs  mcp_stdio.rs  module_loader.rs  net.rs  windowed.rs
crates/limina-runtime/tests/: mcp_ws.rs  p4_multi_client_sync.rs
crates/limina-sandbox/: Cargo.toml
crates/limina-sandbox/src/: lib.rs
docs/: agent-governance.md  mvp-spec.md
editor/: index.html  render-harness.html  styles.css
editor/server/: editor_host.ts
editor/src/: app.js  history.js  reasoning.js  viewport.js
editor/test/: archetype_render.test.cjs  fidelity_frame.test.cjs  history_browser.test.cjs  history_live.test.mjs  history_panel.test.mjs  quest_scene.json  siege_scene.json  viewport_render.test.cjs  visual_refine.test.cjs
examples/: mcp_stdio_client.mjs
examples/spike/: s1_triangle.ts
games/beacon-quest/: .gitignore  build.sh  dogfood.mjs  emit-gds.ts  serve.sh  smoke-playable.mjs
gates/design/: check.mjs  gds-gate-check.mjs  gds-gate.mjs  silhouette-gate.mjs
js/: package-lock.json  package.json
js/scripts/: check-coordinator-demo.mjs  check-determinism.mjs  check-host-portability.mjs  check-live-composition.mjs  export-demo.ts  slice-gate-broken.ts  slice-gate.ts
js/src/: asset-registry.ts  bootstrap.ts  browser-entry.ts  demo.ts  engine.ts  render-baseline.ts  water.ts
js/test/: _dump_quest_scene.ts  _dump_siege_scene.ts  agent_multiturn.ts  b0_audio.ts  b1_audio.ts  b2_audio.ts  b3_audio.ts  b4_audio.ts  billiards_physics.ts  collision_geometry.ts  eventloom_bridge_producer.ts  eventloom_bridge_roundtrip.mjs  hot_reload.ts  m0_seams.ts  m10_player_ollama.ts  m11_m12_tracing.ts  m1_registry.ts  m3_skills.ts  m7_agents.ts  m8_ollama.ts  mcp_stdio.ts  p0_2_ops.ts  p0_4_cube.ts  p0_5_physics.ts  p0_7_ecs.ts  p10_delegate.ts  p10_exposure.ts  p11_asset_place.ts  p11_asset_scatter.ts  p11_biome_content.ts  p11_biome_mount.ts  p11_cottage_scene.ts  p11_curvature_placement.ts  p11_default_render_skills.ts  p11_erosion.ts  p11_gltf_texture.ts  p11_material_palette.ts  p11_materials.ts  p11_model_source.ts  p11_populate_replay.ts  (+137 more)
js/tools/: eventloom_bridge.mjs
packager/: check.mjs  pack.mjs
plans/: ROADMAP.md  agent-skill-catalog.md  asset-source-spike.md  bmap-pipeline-spike.md  implementation-plan.md  limina-phase-3-isolation-decision.md  limina-sota-engine.md  modeling-loop-spike.md  path-to-adoption.md  phase-10-governance-orchestration.md  phase-10-implementation-plan.md  phase-11-content-assets.md  phase-11-implementation-plan.md  phase-12-finish.md  phase-12-playable-game-skills.md  phase-6-open-the-door-plan.md  phase-7-authoring-surface-plan.md  phase-8-run-anywhere-plan.md  phase-9-worlds-worth-authoring-plan.md  phase-9.1-prop-scatter-plan.md  post-mvp-roadmap.md  remaining-io-handoff.md  skills-exchange-roadmap.md  track-r-native-render.md  web-export-portability-spike.md  worldgen-roadmap.md  worldgen-terrain-diffusion-spike.md  x-article-roadmap-draft.md
plans/limina-phase-0-1-mvp/: plan.md
plans/limina-phase-0-foundation/: plan.md
plans/limina-phase-1-agent-core/: plan.md
plans/limina-phase-2-open-world/: plan.md
plans/limina-phase-3-scale-fidelity/: plan.md
plans/limina-phase-4-platform/: plan.md
plans/limina-phase-5-presentation-audio/: plan.md
plans/limina-phase-5b-audio/: plan.md
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME  install.ps1  install.sh  llms-full.txt  llms.txt
site/scripts/: fetch-hero-assets.mjs  gen-llms.mjs  gen-skills-doc.mjs  sync-installers.mjs
spikes/isolation/: Cargo.toml  REPORT.md  baseline.ts
spikes/isolation/model/: Cargo.toml
spikes/isolation/model/src/: lib.rs
spikes/isolation/quickjs/: Cargo.toml
spikes/isolation/quickjs/src/: main.rs
spikes/isolation/results/: baseline.txt  quickjs.txt  v8.txt
spikes/isolation/v8/: Cargo.toml
spikes/isolation/v8/src/: main.rs
spikes/netcode/: Cargo.toml  REPORT.md  run.sh
spikes/netcode/client/: Cargo.toml
spikes/netcode/client/src/: main.rs
spikes/netcode/common/: Cargo.toml
spikes/netcode/common/src/: lib.rs
spikes/netcode/engineprobe/: Cargo.toml
spikes/netcode/engineprobe/src/: main.rs
spikes/netcode/results/: client.out  engineprobe.out  server.addr  server.out  server_worldlog.jsonl
spikes/netcode/server/: Cargo.toml
spikes/netcode/server/src/: main.rs
spikes/s0-terrain-diffusion/: README.md  RESULT.md  run.py  run.sh
spikes/w0-physics-parity/: RESULT.md  compare.mjs  control_native.ts  control_wasm.mjs  native.json  package-lock.json  package.json  wasm.json  wasm_dump.mjs
tools/: _pw-resolve.mjs  asset-fetch.ts  curate.ts  dump-skills.mjs  dump-skills.ts  export-island.ts  export-relic-hunt.ts  obj-archive-to-glb.ts  package-desktop.sh  package.json  shoot.mjs  write-island-bundle.mjs  write-relic-hunt-bundle.mjs
tools/create-limina-app/: README.md  index.mjs  package.json
tools/director/: browser-gate.mjs  build-web.ts  check-gds.ts  check-slice-builder.mjs  emit-gds-schema.ts  engine-browser-gate.mjs  (+6 more)
web/: index.html  styles.css  terrain.html
(+357 files in other folders)
