[package]
name = "limina-render"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
deno_core.workspace = true
deno_webgpu.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_image.workspace = true
raw-window-handle.workspace = true
deno_error.workspace = true
