# P4.0c netcode spike -- DETACHED workspace (this [workspace] table makes it a
# separate root, so it never attaches to or edits the engine workspace). Throwaway
# prototype: stand up a REAL authoritative server process + a REAL client process
# over a REAL localhost socket; submit intents; broadcast authoritative state
# deltas; measure intent->applied->synced p95; prove server authority. NOT wired
# into engine core.
#
#   common      -- the on-wire message contract shared by server + client.
#   server      -- authoritative fixed-step sim + world log; accepts intents,
#                  permission/authority-checks them, broadcasts state deltas.
#   client      -- connects, runs the authority probe + the latency benchmark.
#   engineprobe -- reuses the REAL `limina --mcp-ws` binary read-only to ground
#                  the model's latency in the engine's actual WS transport and to
#                  show the engine's real permission boundary rejecting a write.
[workspace]
resolver = "2"
members = ["common", "server", "client", "engineprobe"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake", "connect", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
common = { path = "common" }
