[package]
name = "engineprobe"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "netcode-engineprobe"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
